fix: add alignment

--- a/style.css
+++ b/style.css
@@ -58,6 +58,15 @@
     flex-wrap: wrap;
   }
   
+  .main-container {
+    display: flex;
+    flex-wrap: wrap;
+  }
+  .footer-container {
+    display: flex;
+    flex-wrap: wrap;
+  }
+  
   .section {
     width: 50%;
   }
